@@ -1,3 +1,7 @@
+2019-11-12  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
+	* gcc.dg/vect/pr92347.c: New test.
+
 2019-11-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/92447
