@@ -1,3 +1,8 @@
+2019-11-12  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
+	* tree-vect-loop.c (vect_transform_loop): Don't overwrite epilogues
+	safelen with 0.
+
 2019-11-12  Alan Modra  <amodra@gmail.com>
 
 	* config/rs6000/predicates.md (unspec_tls): Allow const0_rtx for got
